<resources>
    <string name="app_name">TwitterApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_twitter">Hello twitter</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_enter_username">Enter your user name</string>
    <string name="lbl_pwd">Password</string>
    <string name="lbl_enter_pwd">Enter Password</string>
    <string name="lbl_login">Login</string>
</resources>
